# fastapi-base

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: public.yml  test.yml
rbl_fastapi_base/: app.py
rbl_fastapi_base/auth/: security.py
rbl_fastapi_base/base/: __init__.py  base_router.py  business_exception.py  response_object.py
rbl_fastapi_base/config/: log_config.py
rbl_fastapi_base/middleware/: exception_handler.py
scripts/: install-deps.sh  lint.sh  test.sh  type.sh
src/fastapi_base/: __init__.py  app.py  compile_package.py  error_code.py  exception.py  model.py  response.py  schema.py  timer.py
src/fastapi_base/authen/: __init__.py  basic.py  bearer.py
src/fastapi_base/connection/: __init__.py  sql_async_conn.py  sql_conn.py
src/fastapi_base/crud/: __init__.py  sql_async_repo.py  sql_repo.py
src/fastapi_base/logger/: __init__.py  filter.py
src/fastapi_base/logger/formatter/: __init__.py  json_fomatter.py
src/fastapi_base/logger/handler/: __init__.py  file_handler.py  gg_chat_handler.py  logstash_handler.py  stdout_handler.py
src/fastapi_base/middleware/: common_handler.py  exception_handler.py
src/fastapi_base/pattern/: singleton.py
src/fastwings/: compile_package.py  config.py  model.py  schema.py  timer.py  types.py
src/fastwings/authen/: basic.py  bearer.py
src/fastwings/connection/: sql_async_conn.py  sql_conn.py
src/fastwings/crud/: sql_async_repo.py  sql_query_builder.py  sql_repo.py
src/fastwings/error/: error_code.py  error_message.py
src/fastwings/logger/: __init__.py
src/fastwings/logger/formatter/: json_formatter.py
src/fastwings/logger/handler/: file_handler.py  gg_chat_handler.py  logstash_handler.py  stdout_handler.py
src/fastwings/middleware/: common_handler.py  exception_handler.py
src/fastwings/repository/: base_sql.py  query_builder.py
src/fastwings/schema/: auth.py  common.py
src/fastwings/service/: base_sql.py
src/fastwings/utils/: base_sql_serivce.py
tests/: conftest.py  test_app.py  test_exception.py  test_logger.py  test_middleware.py  test_model.py  test_pattern.py  test_schema.py  test_timer.py
tests/authen/: test_basic.py  test_bearer.py
tests/crud/: test_sql_async_repo.py  test_sql_repo.py
